# robotica

./: .gitignore  CALIBRACION.yaml  DEPLOY.md  README.md
deploy/: boot-config-snippet.txt
deploy/scripts/: build_lidar.sh  joy_test.py  motor_twitch.py  panel_pub.py  robot_motors.sh  robot_panel.py  robot_start.sh  robot_test.sh  setup_ros2_jazzy.sh  setup_workspace.sh
deploy/systemd/: robot-bringup.service  robot-panel.service  robot_eyes.service
deploy/systemd/robot_eyes.service.d/: gemini.conf.template
src/huskylens2_ros2/: package.xml  setup.cfg  setup.py
src/huskylens2_ros2/config/: huskylens_params.yaml
src/huskylens2_ros2/huskylens2_ros2/: dfrobot_huskylens_i2c.py  huskylens_node.py
src/huskylens2_ros2/launch/: huskylens.launch.py
src/m1ct_d2/: CMakeLists.txt
src/m1ct_d2/include/m1ct_d2/: node_lidar.h
src/m1ct_d2/launch/: lidar.launch.py
src/m1ct_d2/params/: m1ct_d2.yaml
src/m1ct_d2/src/: main.cpp  node_lidar.cpp
src/robot_eyes/: package.xml  setup.cfg  setup.py
src/robot_eyes/config/: robot_eyes_params.yaml
src/robot_eyes/launch/: huskylens_tts.launch.py  robot_eyes.launch.py  robot_eyes_huskylens.launch.py
src/robot_eyes/robot_eyes/: __init__.py  animation_engine.py  battery_alert_node.py  behaviors.py  display_driver.py  eye_renderer.py  huskylens_bridge_node.py  huskylens_gaze_bridge.py  huskylens_tts_node.py  huskylens_wifi_node.py  ros_node.py  tts_node.py  voice_command_node.py
src/robot_eyes/scripts/: examples.py  huskylens_bridge.py  launch_eyes.py  simulate_preview.py
src/robotica_base/: package.xml  setup.py
src/robotica_base/config/: robot_params.yaml
src/robotica_base/robotica_base/: base_node.py  odometry_node.py
src/robotica_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/robotica_bringup/config/: 8bitdo_teleop.yaml  ekf.yaml  laser_filter.yaml  nav2_params.yaml  slam_toolbox.yaml  twist_mux.yaml
src/robotica_bringup/launch/: lidar_test.launch.py  mapping.launch.py  navigation.launch.py  robot.launch.py  teleop.launch.py
src/robotica_description/: CMakeLists.txt  package.xml
src/robotica_description/urdf/: robot.urdf.xacro
src/robotica_msgs/: CMakeLists.txt  package.xml
src/robotica_msgs/msg/: EncoderData.msg  MotorCommand.msg  ServoCommand.msg
src/rrc_lite_ros2/: package.xml  setup.cfg  setup.py
src/rrc_lite_ros2/config/: rrc_lite_params.yaml
src/rrc_lite_ros2/launch/: rrc_lite.launch.py
src/rrc_lite_ros2/rrc_lite_ros2/: hiwonder_board.py  mecanum_kinematics.py  rrc_lite_node.py
