<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>huskylens2_ros2</name>
  <version>0.1.0</version>
  <description>
    Driver ROS 2 para la HuskyLens 2 (DFRobot SEN0638 / Product 3118 Plus Kit).
    Lee detecciones via I2C y las publica como vision_msgs/Detection2DArray.
    El servidor MCP está integrado en el firmware del dispositivo (Wi-Fi).
  </description>
  <maintainer email="yube00@hotmail.com">VY</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>python3-smbus2</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
