<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotica_bringup</name>
  <version>0.1.0</version>
  <description>
    Paquete de bringup principal del robot Mecanum.
    Contiene configuraciones de EKF, Nav2, SLAM Toolbox, laser_filters y twist_mux,
    más el launch file que arranca todo el stack de navegación.
  </description>
  <maintainer email="yube00@hotmail.com">VY</maintainer>
  <license>MIT</license>

  <!-- Dependencias de launch -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Nodos propios -->
  <exec_depend>rrc_lite_ros2</exec_depend>
  <exec_depend>huskylens2_ros2</exec_depend>

  <!-- Sensores -->
  <exec_depend>ldlidar_stl_ros2</exec_depend>

  <!-- Navegación -->
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>laser_filters</exec_depend>
  <exec_depend>twist_mux</exec_depend>

  <!-- URDF/TF -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
