<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotica_description</name>
  <version>0.1.0</version>
  <description>Descripción URDF del robot autónomo (geometría, sensores, articulaciones)</description>
  <maintainer email="pi@robotica.local">Robot Autonomo</maintainer>
  <license>MIT</license>

  <build_depend>xacro</build_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
