<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rrc_lite_ros2</name>
  <version>0.1.0</version>
  <description>
    Driver ROS 2 para la placa controladora Huaner/Hiwonder STM32 (RRC Lite).
    Soporta 4 motores Mecanum con encoder Hall, IMU, servos PWM para gimbal.
    Incluye SDK serie adaptado del proyecto MentorPi (Hiwonder, MIT License).
  </description>
  <maintainer email="yube00@hotmail.com">VY</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
